--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,20 +2,22 @@
 agp = "9.0.0"
 coreKtx = "1.17.0"
 hiltAndroid = "2.59"
+hiltNavigationCompose = "1.3.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.10.0"
-activityCompose = "1.12.2"
+activityCompose = "1.12.3"
 kotlin = "2.3.0"
 composeBom = "2024.09.00"
-navigationComposeVersion = "2.9.6"
+navigationComposeVersion = "2.9.7"
 roomRuntime = "2.8.4"
 ksp = "2.3.4"
 hilt = "2.59"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleRuntimeKtx" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationComposeVersion" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
